[package]
name = "cozal"
version = "0.0.2"
authors = ["Mason Boeman <masonboeman@gmail.com>"]
edition = "2018"
repository = "https://github.com/maboesanman/cozal.git"
description = "deterministic game event pipeline with isolated configurable components"
license = "MIT"

[features]
# default = []
window = ["winit"]
realtime = ["tokio"]

[dependencies]
async-trait = "0.1.40"
pin-project = "0.4.23"
take_mut = "0.2.2"
futures = "0.3.5"
im = "15.0.0"
flume = "0.7.2"

tokio = { version = "0.2.21", features = ["time"], optional = true }
winit = { version = "0.22.2", optional = true }

[dev-dependencies]
matches = "0.1.8"
