[package]
name = "cozal"
version = "0.0.2"
authors = ["Mason Boeman <masonboeman@gmail.com>"]
edition = "2018"
repository = "https://github.com/maboesanman/cozal.git"
description = "deterministic game event pipeline with isolated configurable components"
license = "MIT"

[features]
window = ["winit"]
realtime = ["tokio"]

[dependencies]
async-trait = "0.1.50"
pin-project = "1.0.7"
take_mut = "0.2.2"
futures = { version = "0.3.15", features = ["unstable", "bilock"] }
im = "15.0.0"
flume = "0.10.5"
either = "1.6.1"
array-init = "2.0.0"
rand = "0.8.3"

tokio = { version = "1.6.1", features = ["time"], optional = true }
winit = { version = "0.25.0", optional = true }

[dev-dependencies]
matches = "0.1.8"
