[package]
name = "cozal"
version = "0.0.2"
authors = ["Mason Boeman <masonboeman@gmail.com>"]
edition = "2021"
repository = "https://github.com/maboesanman/cozal.git"
description = "deterministic game event pipeline with isolated configurable components"
license = "MIT"

[dependencies]
async-trait = "0.1.50"
pin-project = "1.0.7"
take_mut = "0.2.2"
futures-core = "0.3.15"
im = "15.0.0"
array-init = "2.0.0"
rand = "0.8.3"
rand_chacha = "0.3.0"

[dev-dependencies]
matches = "0.1.8"
