[package]
name = "transposer"
version = "0.0.2"
authors = ["Mason Boeman <masonboeman@gmail.com>"]
edition = "2021"
repository = "https://github.com/maboesanman/cozal.git"
description = "deterministic game event pipeline with isolated configurable components"
license = "MIT"

[dependencies]
util = { path = "../util"}
async-trait = "0.1.50"
pin-project = "1.0.7"
futures-core = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
im = "15.1.0"
im-rc = "15.1.0"
rand = "0.8.3"
rand_chacha = "0.3.0"
uuid = { version = "0.8", features = ["v4"] }
parking_lot = "0.11.2"
type_erased_vec = "0.2.0"

[dev-dependencies]
matches = "0.1.8"
futures-test = "0.3"
futures-executor = "0.3"